--- a/package.json
+++ b/package.json
@@ -2,14 +2,14 @@
   "name": "ev-emitter",
   "version": "2.1.2",
   "description": "lil' event emitter",
+  "type": "module",
   "main": "ev-emitter.js",
   "devDependencies": {
-    "ava": "^3.15.0",
     "eslint": "^7.30.0",
     "eslint-plugin-metafizzy": "^1.2.1"
   },
   "scripts": {
-    "test": "npm run lint && ava",
+    "test": "npm run lint && node --test",
     "lint": "npx eslint ."
   },
   "eslintConfig": {
@@ -18,11 +18,10 @@
     ],
     "extends": "plugin:metafizzy/base",
     "parserOptions": {
-      "ecmaVersion": 2018
+      "ecmaVersion": 11
     },
     "env": {
-      "browser": true,
-      "commonjs": true
+      "browser": true
     }
   },
   "repository": {
