Update lockfile version; Upgrade eslint; Lint
- Adds eslint-plugin-jsdoc
- Removes eslint-plugin-metafizzy

Wanted to keep the linting rules from metafizzy but it was a bit
troublesome with the flat config of new eslint. Mostly, it was
problems with types of rule values that were in the configs so
it would have probably worked by ingoring typings.

--- a/package.json
+++ b/package.json
@@ -5,24 +5,12 @@
   "type": "module",
   "main": "ev-emitter.js",
   "devDependencies": {
-    "eslint": "^7.30.0",
-    "eslint-plugin-metafizzy": "^1.2.1"
+    "eslint": "^8.48.0",
+    "eslint-plugin-jsdoc": "^46.5.0"
   },
   "scripts": {
     "test": "npm run lint && node --test",
     "lint": "npx eslint ."
-  },
-  "eslintConfig": {
-    "plugins": [
-      "metafizzy"
-    ],
-    "extends": "plugin:metafizzy/base",
-    "parserOptions": {
-      "ecmaVersion": 11
-    },
-    "env": {
-      "browser": true
-    }
   },
   "repository": {
     "type": "git",
