--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "description": "lil' event emitter",
   "type": "module",
   "main": "ev-emitter.js",
-  "types": "ev-emitter.d.ts",
+  "types": "dist/ev-emitter.d.ts",
   "devDependencies": {
     "eslint": "^8.48.0",
     "eslint-plugin-jsdoc": "^46.5.0",
@@ -13,7 +13,8 @@
   "scripts": {
     "test": "npm run lint && node --test",
     "lint": "npx eslint .",
-    "build:types": "npx tsc -p ./jsconfig.json"
+    "build:types": "npx tsc -p ./jsconfig.json",
+    "postbuild:types": "npx @microsoft/api-extractor run --local --verbose"
   },
   "repository": {
     "type": "git",
